--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,18 +7,12 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
+  - name: Research
     url: '#posts'
     weight: 20
-  - name: Projects
-    url: '#projects'
+  - name: CV
+    url: uploads/cv.pdf
     weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
-  - name: Publications
-    url: '#featured'
-    weight: 50
   - name: Contact
     url: '#contact'
     weight: 60
