--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -8,7 +8,7 @@ main:
     url: '#about'
     weight: 10
   - name: Research
-    url: '#research2'
+    url: '#research'
     weight: 20
   - name: CV
     url: uploads/cv.pdf
