--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,6 +10,9 @@ main:
   - name: Research
     url: '#research'
     weight: 20
+    - name: Policy Work
+    url: '#skills'
+    weight: 20
   - name: CV
     url: uploads/cv.pdf
     weight: 30
